Fix paper turn on smaller screens

--- a/app/assets/stylesheets/quiz.scss
+++ b/app/assets/stylesheets/quiz.scss
@@ -33,9 +33,9 @@
 	list-style: none;
 	margin: 0;
   background-color: #eee;
-  background-image: linear-gradient(#ddd 0.5px, transparent 1px);
+  background-image: linear-gradient(#ddd 0.4px, transparent 1px);
   background-size: 100% 1.6rem;
-  clip-path: polygon(100% 0, 100% 90%, 95% 100%, 0 100%, 0 0);
+  clip-path: polygon(100% 0, 100% 90%, 92% 100%, 0 100%, 0 0);
 	position: relative;
 	color: #111;
   margin-bottom: 1rem;
@@ -43,7 +43,7 @@
 		position: absolute;
 		bottom: 0;
 		right: 0;
-		width: 5%;
+		width: 8%;
 		height: 10%;
     box-shadow: -2px -2px 5px #ddd;
     background-color: #eee;
@@ -109,5 +109,10 @@
 	}
 	.paper {
     margin-right: 20px;
+    clip-path: polygon(100% 0, 100% 80%, 95% 100%, 0 100%, 0 0);
+    .paper-turn {
+      width: 5%;
+      height: 20%;
+    }
 	}
 }
